code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_4.wast
(assert_invalid
  (module (func $type-false-f64 (block (f64.neg (br_if 0 (i32.const 0))))))
  "type mismatch"
)